fixed visibility hide/show for users

--- a/src/App.css
+++ b/src/App.css
@@ -278,6 +278,7 @@
 }
 
 .online-users {
+  visibility: hidden;
   text-align: left;
   color: antiquewhite;
   margin: 9px;
